--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>#employee</title>
 </head>
 <body>
-<h1 style="color: yellow">Hello world!!!</h1>
+<h1 style="color: #c52d30">Hello world!!!</h1>
+
+прива
 </body>
 </html>
